--- a/package.json
+++ b/package.json
@@ -60,10 +60,12 @@
     "lodash": "4.17.4",
     "mocha": "3.5.0",
     "nyc": "11.1.0",
+    "ts-loader": "^9.2.6",
     "ts-node": "3.3.0",
     "tslint": "5.6.0",
-    "typescript": "2.4.2",
-    "webpack": "^3.5.4",
+    "typescript": "^2.4.2",
+    "webpack": "^3.12.0",
+    "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^3.11.0",
     "winston": "2.3.1"
   },
@@ -95,6 +97,7 @@
   },
   "scripts": {
     "build": "npm run clean && webpack --progress --colors",
+    "wbuild": "npx webpack --progress --colors",
     "clean": "rm -rf dist/",
     "coverage": "nyc npm t",
     "jshint": "jshint ./",
